# Hardening

./: README.md  pyproject.toml
hardening/docs/: conf.py  index.rst
hardening/docs/_build/doctrees/: environment.pickle  index.doctree
hardening/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
hardening/src/: folderstore.py  general.py  ransomware.py  slackspace.py
