[tool.poetry]
name = "hardening"
version = "0.1.0"
description = ""
authors = ["Gabriel Biudes <gabriel.biudes159@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pathlib = "^1.0.1"
cryptography = "^38.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
